--- a/jatekok/stilus.css
+++ b/jatekok/stilus.css
@@ -1,8 +1,8 @@
-.fotarolo, .mezo {
+#jatekok .fotarolo, .mezo {
     border: 1px solid black;
 }
 
-.fotarolo {
+#jatekok .fotarolo {
     max-width: 700px;
     margin: auto;
     display: flex;
@@ -12,7 +12,7 @@
     
 }
 
-.mezo {
+#jatekok .mezo {
     width: 150px;
     height: 150;
     margin: 5px;
@@ -22,6 +22,68 @@
 
 }
 
-img {
+#jatekok img {
     width: 100%;
 }
+
+#jatekok #gyozelem {
+    position: fixed; 
+    display: none; 
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%; 
+    height: 100%; 
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5); 
+    z-index: 2; 
+}
+
+#jatekok h1 {
+    font-size: 45px;
+    color: rgb(255, 255, 255);
+}
+
+#jatekok #gyozelem p {
+    font-size: 25px;
+}
+
+#jatekok .gomb {
+    width: 250px;
+    text-align: center;
+    border: 5px solid rgb(0, 0, 0);
+    background-color: rgb(184, 181, 181);
+    margin: 5px;
+}
+
+#jatekok .gombTarolo {
+    display: flex;
+}
+
+#jatekok .gomb:hover {
+    cursor: pointer;
+}
+
+#jatekok #ujJatekGomb {
+    margin: auto;
+    margin-top: 15px;
+    border: 1px solid black;
+    width: 150px;
+    text-align: center;
+    border: 5px solid rgb(0, 0, 0);
+    background-color: rgb(23, 173, 227);
+}
+
+#jatekok #ujJatekGomb:hover {
+    cursor: pointer;
+}
+
+#jatekok .gomb2 {
+    margin: auto;
+    font-weight: bold;
+
+}
+
