--- a/jatekok/stilus.css
+++ b/jatekok/stilus.css
@@ -3,7 +3,7 @@
 }
 
 #jatekok .fotarolo {
-    max-width: 700px;
+    max-width: 800px;
     margin: auto;
     display: flex;
     justify-content: center;
@@ -14,7 +14,7 @@
 
 #jatekok .mezo {
     width: 150px;
-    height: 150;
+    height: 225px;
     margin: 5px;
     display: flex;
     justify-content: center;
@@ -23,12 +23,13 @@
 }
 
 #jatekok img {
-    width: 100%;
+    width: 150px;
+    height: 225px;
 }
 
 #jatekok #gyozelem {
     position: fixed; 
-    display: none; 
+    display: flex; 
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -59,7 +60,15 @@
     margin: 5px;
 }
 
-#jatekok .gombTarolo {
+#jatekok .gomb:hover {
+    background-color: rgb(223, 223, 223);
+}
+
+#jatekok .gomb:active {
+    background-color: rgb(94, 94, 94);
+}
+
+#jatekok .gombTarolo{
     display: flex;
 }
 
@@ -78,6 +87,14 @@
 }
 
 #jatekok #ujJatekGomb:hover {
+    background-color: rgb(44, 194, 248);
+}
+
+#jatekok #ujJatekGomb:active {
+    background-color: rgb(0, 133, 182);
+}
+
+#jatekok #ujJatekGomb:hover {
     cursor: pointer;
 }
 
@@ -86,4 +103,12 @@
     font-weight: bold;
 
 }
+
+#jatekok .gombTarolo a {
+    text-decoration: none;
+    color: black;
+}
+
+
+
 
