--- a/jatekok/stilus.css
+++ b/jatekok/stilus.css
@@ -1,3 +1,10 @@
+#kozos header {
+    background-image: url("../kepek/kozos/hatter.jpg");
+    height: 300px;
+    background-size: auto;
+    background-repeat: no-repeat;
+}
+
 #jatekok .fotarolo, .mezo {
     border: 1px solid black;
 }
@@ -29,7 +36,7 @@
 
 #jatekok #gyozelem {
     position: fixed; 
-    display: flex; 
+    display: none; 
     justify-content: center;
     align-items: center;
     flex-direction: column;
