--- a/kepgaleria/galeria.css
+++ b/kepgaleria/galeria.css
@@ -1,6 +1,3 @@
-body{
-    background-color: wheat;
-}
 button{
     width: 100%;
     height: 100%;
@@ -15,6 +12,11 @@ main{
 article img{
     width: 100%;
 }
+
+#inp img {
+    padding: 5px;
+}
+
 .container{
     display: flex;
     flex-wrap: wrap;
