--- a/jatekok/stilusMemoriaJatek.css
+++ b/jatekok/stilusMemoriaJatek.css
@@ -3,7 +3,7 @@
     height: 300px;
     background-size: auto;
     background-repeat: no-repeat;
-}
+}a
 
 #jatekok .fotarolo, .mezo {
     border: 1px solid black;
@@ -27,6 +27,10 @@
     justify-content: center;
     align-items: center;
 
+}
+
+#jatekok .mezo:hover {
+    cursor: pointer;
 }
 
 #jatekok img {
