--- a/jatekok/stilusSzelektivJatek.css
+++ b/jatekok/stilusSzelektivJatek.css
@@ -8,7 +8,7 @@
 }
 
 #jatekok2 #jatekMezo{
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     z-index: 1;
@@ -39,8 +39,7 @@
     justify-content: center;
 }
 
-#jatekok2 #kezdoKep {
-    position: fixed; 
+#jatekok2 #kezdoKep{
     display: flex; 
     justify-content: center;
     align-items: center;
@@ -55,7 +54,22 @@
     z-index: 2; 
 }
 
-#jatekok2 #kezdoKep button {
+#jatekok2 #jatekVege {
+    display: none; 
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%; 
+    height: 100%; 
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5); 
+    z-index: 2;
+}
+
+#jatekok2 .jatekGomb {
     width: 250px;
     height: 100px;
     text-align: center;
