--- a/fostilus.css
+++ b/fostilus.css
@@ -1,21 +1,74 @@
-.kozos ul li{
+body {
+    margin: 0px;
+}
+
+ul li{
     list-style-type: none;
 
 }
 
-.kozos nav ul{
-    
+nav ul{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    padding: 0px;
     padding-top: 15px;
+    margin: 0px;
 
 }
 
-.kozos nav {
-    width: 800px;
+nav {
+    width: 100%;
     height: 50px;
-    background-color: bisque;
     margin: auto;
 }
+
+nav a {
+    color: black;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+header {
+    margin: auto;
+    margin-top: 15px;
+    padding: 15px;
+    text-align: center;
+    top: 0;
+    background-image: url("kepek/kozos/headerhatter.JPG");
+    filter: blur(5px);
+    width: 100%;
+    background-repeat: no-repeat;
+    margin-left: 0px;
+
+
+}
+
+header div {
+    width: 98%;
+    background-color: wheat;
+    margin: auto;
+    padding: 15px;
+}
+
+h1 {
+    margin: 0px;
+}
+
+article {
+    background-color: white;
+    max-width: 100%;
+    margin: auto;
+    padding: 15px;
+    text-align: justify;
+}
+
+h2 {
+    text-align: center;
+    margin-top: 150px;
+   
+}
+
+
+
 
