--- a/fostilus.css
+++ b/fostilus.css
@@ -2,12 +2,12 @@ body {
     margin: 0px;
 }
 
-ul li{
+#kozos ul li{
     list-style-type: none;
 
 }
 
-nav ul{
+#kozos nav ul{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -17,45 +17,38 @@ nav ul{
 
 }
 
-nav {
+#kozos #kozos nav {
     width: 100%;
     height: 50px;
     margin: auto;
 }
 
-nav a {
+#kozos nav a {
     color: black;
     text-decoration: none;
     font-weight: bold;
 }
 
-header {
-    margin: auto;
-    margin-top: 15px;
-    padding: 15px;
-    text-align: center;
-    top: 0;
-    background-image: url("kepek/kozos/headerhatter.JPG");
-    filter: blur(5px);
-    width: 100%;
+#kozos header {
+    margin-top: 60px;
+    background-image: url("kepek/kozos/hatter.png");
     background-repeat: no-repeat;
-    margin-left: 0px;
-
+    background-position: center;
+    background-position-y: -5px;
+    width: 100%;
+    background-color: rgb(239, 228, 209);
+    height: 150px;
 
 }
 
-header div {
-    width: 98%;
-    background-color: wheat;
+
+#kozos h1 {
     margin: auto;
-    padding: 15px;
+    text-align: center;
+    padding-top: 50px;
 }
 
-h1 {
-    margin: 0px;
-}
-
-article {
+#kozos article {
     background-color: white;
     max-width: 100%;
     margin: auto;
@@ -63,10 +56,15 @@ article {
     text-align: justify;
 }
 
-h2 {
+#kozos h2 {
     text-align: center;
     margin-top: 150px;
    
+}
+
+#kozos #fotarolo {
+    max-width: 1400px;
+    margin: auto;
 }
 
 
