--- a/cikkek/cikkek.css
+++ b/cikkek/cikkek.css
@@ -1,17 +1,12 @@
 article p {
     
     text-align: justify;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
     color: darkslategrey;
     padding: 10px;
+    width: fit-content;
     
-}
-
-article h1 {
-    
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: blueviolet;
-    padding: 10px;
 }
 
 article {
@@ -19,14 +14,12 @@ article {
     background-color: ghostwhite;
 }
 
-article li {
-    color: black;
-    display: block;
-}
 
 
+li  {float: initial; width: fit-content; margin-left: 50px; padding-right: 30px;}
 
 main {max-width: 800px; margin: auto;}
-section {margin: 10px; padding: 30px;}
+section {margin: 10px; padding: 20px; width: fit-content;}
 
-.kepek img{width: 100%; float: left; max-width: 300px;}
+.kepek img{width: 100%; float: left; max-width: 350px; margin-left: 25px;  border-radius: 40px; padding: 30px;}
+
