--- a/fooldal/stilus.css
+++ b/fooldal/stilus.css
@@ -1,141 +1,44 @@
-body{
-    padding: 0;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /*background-color: #e9d8b9;*/
+.szamalk{
+    padding-top: 5%;
 }
-
-/*
-main{
-    
-    background-color: #f7e0c5;
-    background-image: url("https://www.transparenttextures.com/patterns/dark-tire.png");
-}
-*/
-/*
-.fooldal-szov{
-    color: rgb(2, 122, 2);
+.fooldal-udvozlo{
+    text-align: center;
+    font-size: 20px;
+    padding-top: 1%;
 }
 
 a{
-    color: rgb(0, 155, 0);
+    font-size: 20px;
 }
 
-a:hover{
-    color: rgba(44, 71, 4, 0.705);
+p{
+    font-size: 17px;
 }
 
-a:visited{
-    color: rgb(4, 112, 4);
-}
-*/
-/*slideshow starts*/
-.slider{
-    width: 800px;
-    height: 500px;
-    border-radius: 10px;
-    overflow: hidden;
-}
-
-.slides{
-    width: 500%;
-    height: 500px;
+.fooldal-article{
     display: flex;
+    padding-top: 5%;
 }
 
-.slides input{
-    display: none;
+.fooldal-article{
+    margin-left: 5%;
 }
 
-.slide{
-    width: 20%;
-    transition: 2s;
+.fooldal-article img{
+    max-width: 80%;
+    padding-bottom: 2%;
+    padding-top: 2%;
 }
 
-.slide img{
-    width: 800px;
-    height: 500px;
-}
-
-/*css for manual slide navigation*/
-.navigation-manual{
-    position: absolute;
-    width: 800px;
-    margin-top: -40ox;
+.fooldal-aside{
+    padding: 10%;
     display: flex;
     justify-content: center;
 }
 
-.manual-btn{
-    border: 2px solid rgb(255, 255, 255);
-    padding: 5px;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: 1s;
+footer{
+    padding-top: 45%;
+    text-align: center;
+    font-size: 16px;
+    font-family: 'Arial Narrow Bold', sans-serif;
 }
-.manual-btn:not(:last-child){
-    margin-right: 40px;
-}
-
-.manual-btn:hover{
-    background-color: rgb(73, 202, 79);
-}
-
-#radio1:checked ~ .first{
-    margin-left: 0;
-}
-#radio2:checked ~ .first{
-    margin-left: -20%;
-}
-#radio3:checked ~ .first{
-    margin-left: -40%;
-}
-#radio4:checked ~ .first{
-    margin-left: -60%;
-}
-
-/*css for manual slide navigation ends*/
-
-/*css for automatic navigation*/
-.navigation-auto{
-    position: absolute;
-    display: flex;
-    width: 800px;
-    justify-content: center;
-    margin-top: 460px;
-}
-
-.navigation-auto div{
-    /* border: 2px solid black; */
-    padding: 5px;
-    border-radius: 10px;
-    transition: 1s;
-}
-
-.navigation-auto div:not(:last-child){
-    margin-right: 40px;
-}
-
-/*
-#radio1:checked ~ .navigation-auto .auto-btn1{
-    background-color: blueviolet;
-}
-
-#radio2:checked ~ .navigation-auto .auto-btn2{
-    background-color: blueviolet;
-}
-
-#radio3:checked ~ .navigation-auto .auto-btn3{
-    background-color: blueviolet;
-}
-
-#radio4:checked ~ .navigation-auto .auto-btn4{
-    background-color: blueviolet;
-}
-*/
-
-/*css for automatic navigation ends*/
-
-/*slideshow ends*/
