--- a/jatekok/jatekok.css
+++ b/jatekok/jatekok.css
@@ -1,5 +1,41 @@
+#jatekoldal #fotarolo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+p {
+    font-size: 20px;
+}
+
 #jatekoldal .keptarolo {
-    background-image: url("../kepek/jatekok/memoriajatek.png");
-    background-size: contain;
     height: 200px;
+}
+
+
+#jatekoldal a {
+    width: 150px;
+    margin: auto;
+    border: 1px solid black;
+    width: 150px;
+    text-align: center;
+    border: 5px solid rgb(0, 0, 0);
+    background-color: rgb(23, 173, 227);
+    font-weight: bold;
+    text-decoration: none;
+    color: black;
+    height: 50px;
+    text-align: center;
+    padding-top: 20px;
+    font-size: 25px;
+}
+
+#jatekoldal a:hover {
+    background-color: rgb(14, 191, 255);
+
+}
+
+#jatekoldal a:active {
+    background-color: rgb(6, 146, 197);
+
 }
