--- a/jatekok/stilusMemoriaJatek.css
+++ b/jatekok/stilusMemoriaJatek.css
@@ -3,10 +3,10 @@
     height: 300px;
     background-size: auto;
     background-repeat: no-repeat;
-}a
+}
 
-#jatekok .fotarolo, .mezo {
-    border: 1px solid black;
+#jatekok .mezo {
+    border: 5px solid black;
 }
 
 #jatekok .fotarolo {
