--- a/fooldal/stilus.css
+++ b/fooldal/stilus.css
@@ -37,7 +37,7 @@ p{
 }
 
 footer{
-    padding-top: 45%;
+    padding-top: 200px;
     text-align: center;
     font-size: 16px;
     font-family: 'Arial Narrow Bold', sans-serif;
