--- a/fooldal/stilus.css
+++ b/fooldal/stilus.css
@@ -1,14 +1,13 @@
 .szamalk{
     padding-top: 5%;
+    padding-left: 100px;
 }
 .fooldal-udvozlo{
     text-align: center;
     font-size: 20px;
     padding-top: 1%;
-}
-
-a{
-    font-size: 20px;
+    max-width: 90%;
+    margin: auto;
 }
 
 p{
@@ -17,17 +16,21 @@ p{
 
 .fooldal-article{
     display: flex;
+    justify-content: space-around;
+
     padding-top: 5%;
 }
 
-.fooldal-article{
-    margin-left: 5%;
+.article-tarolo {
+    width: 40%;
 }
 
+
 .fooldal-article img{
-    max-width: 80%;
+    width: 100%;
     padding-bottom: 2%;
     padding-top: 2%;
+    border-radius: 30px;
 }
 
 .fooldal-aside{
@@ -41,4 +44,8 @@ footer{
     text-align: center;
     font-size: 16px;
     font-family: 'Arial Narrow Bold', sans-serif;
+}
+
+#fooldal a {
+    text-decoration: none;
 }
