--- a/jatekok/jatekok.css
+++ b/jatekok/jatekok.css
@@ -17,16 +17,16 @@ p {
     width: 150px;
     margin: auto;
     border: 1px solid black;
-    width: 150px;
     text-align: center;
-    border: 5px solid rgb(0, 0, 0);
+    border: 4px solid rgb(0, 0, 0);
+    border-radius: 5px;
     background-color: rgb(245, 227, 165);
     font-weight: bold;
     text-decoration: none;
     color: black;
-    height: 50px;
+    height: 40px;
     text-align: center;
-    padding-top: 20px;
+    padding-top: 5px ;
     font-size: 25px;
 }
 
