--- a/jatekok/stilusMemoriaJatek.css
+++ b/jatekok/stilusMemoriaJatek.css
@@ -19,6 +19,10 @@
     
 }
 
+#jatekok p {
+    margin: 0px;
+}
+
 #jatekok .mezo {
     width: 150px;
     height: 225px;
@@ -88,23 +92,35 @@
 }
 
 #jatekok .gomb2 {
-    width: 150px;
-    margin: auto;
+    width: 200px;
+    margin-left: auto;
+    margin-right: auto;
     border: 1px solid black;
-    width: 150px;
     text-align: center;
-    border: 5px solid rgb(0, 0, 0);
-    background-color: rgb(23, 173, 227);
+    border: 4px solid rgb(0, 0, 0);
+    border-radius: 5px;
+    background-color: rgb(245, 227, 165);
     font-weight: bold;
+    text-decoration: none;
+    color: black;
+    height: 40px;
+    text-align: center;
+    padding-top: 5px ;
+    font-size: 25px;
+    margin-top: 10px;
     
 }
 
+#jatekok a {
+    width: 150px;
+}
+
 #jatekok .gomb2:hover {
-    background-color: rgb(44, 194, 248);
+    background-color: rgb(237, 205, 101);
 }
 
 #jatekok .gomb2:active {
-    background-color: rgb(0, 133, 182);
+    background-color: rgb(252, 215, 91);
 }
 
 #jatekok .gomb2:hover {
@@ -116,16 +132,6 @@
     color: black;
 }
 
-#jatekok #ujJatekGomb {
-    width: 160px;
-    margin: auto;
-
-}
-
-#jatekok #menu {
-    width: 160px;
-    margin: auto;
-}
 
 
 
