--- a/jatekok/stilusSzelektivJatek.css
+++ b/jatekok/stilusSzelektivJatek.css
@@ -6,6 +6,11 @@
     cursor: pointer;
 }
 
+#jatekok2 #szemetTarolo img {
+    cursor: pointer;
+    width: 100%;
+}
+
 #jatekok2 #jatekMezo{
     display: none;
     flex-direction: column;
@@ -15,8 +20,8 @@
 
 
 #jatekok2 #szemetTarolo {
-    width: 250px;
-    height: 250px;
+    width: 350px;
+    height: 350px;
     text-align: center;
 }
 
@@ -95,22 +100,33 @@
 
 
 #jatekok2 .gomb {
-    width: 150px;
-    margin: auto;
+    width: 200px;
+    margin-left: auto;
+    margin-right: auto;
     border: 1px solid black;
-    width: 150px;
     text-align: center;
-    border: 5px solid rgb(0, 0, 0);
-    background-color: rgb(23, 173, 227);
+    border: 4px solid rgb(0, 0, 0);
+    border-radius: 5px;
+    background-color: rgb(245, 227, 165);
     font-weight: bold;
     text-decoration: none;
     color: black;
-    height: 50px;
+    height: 40px;
     text-align: center;
-    padding-top: 20px;
+    padding-top: 5px ;
     font-size: 25px;
-    cursor: pointer;
+    margin-top: 10px;
 }
+
+#jatekok2 .gomb:hover {
+    background-color: rgb(237, 205, 101);
+}
+
+#jatekok2 .gomb:active {
+    background-color: rgb(252, 215, 91);
+}
+
+
 
 #jatekok2 a {
     text-decoration: none;
