--- a/fooldal/stilus.css
+++ b/fooldal/stilus.css
@@ -1,7 +1,9 @@
 .szamalk{
     padding-top: 5%;
     padding-left: 100px;
+    width: 350px;
 }
+
 .fooldal-udvozlo{
     text-align: center;
     font-size: 20px;
@@ -34,7 +36,7 @@ p{
 }
 
 .fooldal-aside{
-    padding: 10%;
+    padding: 5%;
     display: flex;
     justify-content: center;
 }
@@ -48,4 +50,17 @@ footer{
 
 #fooldal a {
     text-decoration: none;
+}
+
+@media screen and (max-width: 600px) {
+    .fooldal-article{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    
+        padding-top: 5%;
+    }
+    .article-tarolo {
+        width: 100%;
+    }
 }
