--- a/kepgaleria/galeria.css
+++ b/kepgaleria/galeria.css
@@ -8,7 +8,7 @@ main{
     border: 1px solid black;
     margin: auto;
     max-width: 60%;
-    background-color: wheat;
+    background-color: rgb(239, 228, 209);
 }
 
 #inp img {
